@@ -77,17 +77,18 @@
     <Compile Include="GUI\UIPreviewRenderer.cs" />
     <Compile Include="GUI\Thumbnails.cs" />
     <Compile Include="Interfaces.cs" />
-    <Compile Include="ModUtils.cs" />
+    <Compile Include="Utils\ModUtils.cs" />
     <Compile Include="Notifications\ConflictNotification.cs" />
     <Compile Include="Notifications\ErrorNotification.cs" />
     <Compile Include="Notifications\HarmonyNotification.cs" />
+    <Compile Include="Patches\Building.cs" />
     <Compile Include="Patches\BuildingLoaded.cs" />
     <Compile Include="Patches\MonumentsPatch.cs" />
     <Compile Include="Patches\RealisticCitizenUnits.cs" />
     <Compile Include="Patches\Patcher.cs" />
     <Compile Include="Patches\InitializePrefab.cs" />
     <Compile Include="Patches\InitPrefabTranspiler.cs" />
-    <Compile Include="RICO\RICOUtils.cs" />
+    <Compile Include="Utils\RICOUtils.cs" />
     <Compile Include="Settings\Settings.cs" />
     <Compile Include="Settings\SettingsUtils.cs" />
     <Compile Include="Settings\SettingsXML.cs" />
