@@ -9,10 +9,11 @@ namespace PloppableRICO
     /// </summary>
     internal static class ModSettings
     {
+        internal static bool plopGrowables = true;
+        internal static bool noZoneChecks = true;
         internal static bool speedBoost = false;
         internal static bool debugLogging = false;
         internal static bool resetOnLoad = true;
-        internal static bool plopGrowables = true;
         internal static int thumbBacks = (byte)ThumbBackCats.skybox;
 
 
@@ -46,14 +47,16 @@ namespace PloppableRICO
     {
         [XmlElement("NotificationVersion")]
         public int NotificationVersion { get => UpdateNotification.notificationVersion; set => UpdateNotification.notificationVersion = value; }
+        [XmlElement("PlopGrowables")]
+        public bool PlopGrowables { get => ModSettings.plopGrowables; set => ModSettings.plopGrowables = value; }
+        [XmlElement("NoZoneChecks")]
+        public bool NoZoneChecks { get => ModSettings.noZoneChecks; set => ModSettings.noZoneChecks = value; }
         [XmlElement("SpeedBoost")]
         public bool SpeedBoost { get => ModSettings.speedBoost; set => ModSettings.speedBoost = value; }
         [XmlElement("DebugLogging")]
         public bool DebugLogging { get => ModSettings.debugLogging; set => ModSettings.debugLogging = value; }
         [XmlElement("ResetOnLoad")]
         public bool ResetOnLoad { get => ModSettings.resetOnLoad; set => ModSettings.resetOnLoad = value; }
-        [XmlElement("PlopGrowables")]
-        public bool PlopGrowables { get => ModSettings.plopGrowables; set => ModSettings.plopGrowables = value; }
         [XmlElement("ThumbBacks")]
         public int ThumbBacks
         {
